style: adding visual fix for level 2 item on mobile

--- a/src/components/base/NavigationItem/NavigationItem.module.scss
+++ b/src/components/base/NavigationItem/NavigationItem.module.scss
@@ -92,7 +92,8 @@
       padding: 0;
       transition: transform var(--motion-speed-very-fast) var(--motion-ease-in-out);
       user-select: none;
-      width: 100%;
+      width: calc(100% - px-to-rem(var(--spacing-l)));
+      text-wrap: pretty;
 
       @include mq($from: large) {
         transition: none;
